--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -27,6 +28,7 @@
     "nodemon": "^2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-use": "^15.3.3",
     "yup": "^0.29.3"
   },
   "devDependencies": {
