--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-toastify": "^6.0.8",
     "react-use": "^15.3.3",
     "yup": "^0.29.3"
   },
